[project]
name = "weather-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-ollama>=1.1.0",
    "langchain[anthropic,openai]>=1.3.13",
    "numpy>=2.5.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
